--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                     <li><a href="#about"><i class="fas fa-info-circle"></i> About Us</a></li>
                     <li><a href="#availability"><i class="fas fa-shipping-fast"></i> Global Reach</a></li>
                     <li><a href="#contact"><i class="fas fa-envelope"></i> Get in Touch</a></li>
-                    <li><a href="login.html" class="login-link"><i class="fas fa-sign-in-alt"></i> Login</a></li>
-                    <li><a href="register.html" class="signup-link"><i class="fas fa-user-plus"></i> Sign Up</a></li>
+                    <li><a href="#login.html" class="login-link"><i class="fas fa-sign-in-alt"></i> Login</a></li>
+                    <li><a href="#register.html" class="signup-link"><i class="fas fa-user-plus"></i> Sign Up</a></li>
                 </ul>
             </nav>
         </div>
