--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
      <section id="hero">
 <section class="hero">
     <div class="hero-content">
-        <img src="assets/main logo.png" alt="Dropex Logo" class="hero-logo">
+        <img src="main logo.png" alt="Dropex Logo" class="hero-logo">
         <h1>Delivering Excellence Worldwide</h1>
         <p>Ensuring your goods reach their destination swiftly and securely.</p>
         <a href="#services" class="btn">Discover Our Services</a>
@@ -118,7 +118,7 @@
         <div class="availability">
             <h2>Our Global Presence</h2>
             <p>Dropex Logistics is committed to serving clients worldwide. Our extensive network spans major regions including the United States, Canada, Mexico, Brazil, Argentina, Chile, the United Kingdom, Germany, France, Italy, Spain, the Netherlands, Turkey, China, India, Thailand, UAE, South Africa, Egypt, Kenya, Uganda, Rwanda, Nigeria, Zambia, DRC, and Tanzania. Our comprehensive services ensure that your shipments are handled with the utmost care and professionalism, regardless of the destination.</p>
-            <img src="assets/maplocation.png" alt="World map with office locations">
+            <img src="maplocation.png" alt="World map with office locations">
         </div>
     </section>
 
