--- a/index.html
+++ b/index.html
@@ -23,24 +23,24 @@
                     <li><a href="#about"><i class="fas fa-info-circle"></i> About Us</a></li>
                     <li><a href="#availability"><i class="fas fa-shipping-fast"></i> Global Reach</a></li>
                     <li><a href="#contact"><i class="fas fa-envelope"></i> Get in Touch</a></li>
-                    <li><a href="login.html" class="login-link"><i class="fas fa-sign-in-alt"></i> Login</a></li>
-                    <li><a href="register.html" class="signup-link"><i class="fas fa-user-plus"></i> Sign Up</a></li>
+                    <li><a href="#" class="login-link"><i class="fas fa-sign-in-alt"></i> Login</a></li>
+                    <li><a href="#" class="signup-link"><i class="fas fa-user-plus"></i> Sign Up</a></li>
                 </ul>
             </nav>
         </div>
     </header>
 
     <!-- Hero Section -->
-    <section id="hero">
-        <section class="hero">
-            <div class="hero-content">
-                <img src="main logo.png" alt="Dropex Logo" class="hero-logo">
-                <h1>Delivering Excellence Worldwide</h1>
-                <p>Ensuring your goods reach their destination swiftly and securely.</p>
-                <a href="#services" class="btn">Discover Our Services</a>
-            </div>
-        </section>
-    </section>
+     <section id="hero">
+<section class="hero">
+    <div class="hero-content">
+        <img src="main logo.png" alt="Dropex Logo" class="hero-logo">
+        <h1>Delivering Excellence Worldwide</h1>
+        <p>Ensuring your goods reach their destination swiftly and securely.</p>
+        <a href="#services" class="btn">Discover Our Services</a>
+    </div>
+</section>
+
 
     <!-- Services Section -->
     <section id="services">
@@ -100,52 +100,104 @@
                 <div class="feature-title">Hassle-Free Process</div>
                 <div class="feature-description">We manage customs and taxes on your behalf.</div>
             </div>
+            <div class="feature">
+                <div class="feature-icon"><i class="fas fa-map-marker-alt"></i></div>
+                <div class="feature-title">Real-Time Tracking</div>
+                <div class="feature-description">Stay updated with our accurate tracking system.</div>
+            </div>
+            <div class="feature">
+                <div class="feature-icon"><i class="fas fa-home"></i></div>
+                <div class="feature-title">Doorstep Delivery</div>
+                <div class="feature-description">We deliver directly to your home or office.</div>
+            </div>
         </div>
     </section>
 
     <!-- Availability Section -->
     <section id="availability">
         <div class="availability">
-            <h2>Where We Operate</h2>
-            <p>We offer logistics services in the following countries: United States, Canada, Mexico, Brazil, Argentina, Chile, United Kingdom, Germany, France, Italy, Spain, Netherlands, Turkey, China, India, Thailand, UAE, South Africa, Egypt, Kenya, Uganda, Rwanda, Nigeria, Zambia, DRC, and Tanzania.</p>
+            <h2>Our Global Presence</h2>
+            <p>Dropex Logistics is committed to serving clients worldwide. Our extensive network spans major regions including the United States, Canada, Mexico, Brazil, Argentina, Chile, the United Kingdom, Germany, France, Italy, Spain, the Netherlands, Turkey, China, India, Thailand, UAE, South Africa, Egypt, Kenya, Uganda, Rwanda, Nigeria, Zambia, DRC, and Tanzania. Our comprehensive services ensure that your shipments are handled with the utmost care and professionalism, regardless of the destination.</p>
+            <img src="maplocation.png" alt="World map with office locations">
+        </div>
+    </section>
+
+    <!-- Transportation Section -->
+    <section class="transportation">
+        <h2>Shipping Solutions for Every Need</h2>
+        <p>With our global network, Dropex Logistics offers tailored transportation services to meet your specific needs. Whether it's air, sea, or land, we handle your shipments with precision and care, ensuring they reach their destination on time and in perfect condition.</p>
+        <div class="transport-options">
+            <div class="option">
+                <div class="icon" id="sea"></div>
+                <p>By Sea</p>
+            </div>
+            <div class="option">
+                <div class="icon" id="land"></div>
+                <p>By Land</p>
+            </div>
+            <div class="option">
+                <div class="icon" id="air"></div>
+                <p>By Air</p>
+            </div>
         </div>
     </section>
 
     <!-- Contact Section -->
     <section id="contact">
-        <h2>Contact Us</h2>
-        <form action="#" method="POST">
-            <input type="text" placeholder="Your Name" required>
-            <input type="email" placeholder="Your Email" required>
-            <textarea placeholder="Your Message" rows="5" required></textarea>
-            <button type="submit">Send Message</button>
+        <h2>Connect with Us</h2>
+        <form>
+            <input type="text" placeholder="Your Name">
+            <input type="email" placeholder="Your Email">
+            <textarea placeholder="Your Message"></textarea>
+            <button type="submit">Submit Message</button>
         </form>
     </section>
 
-    <!-- Footer Section -->
+    <!-- Footer -->
     <footer>
+        <div class="social-media">
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+        </div>
         <div class="footer-container">
             <div class="footer-column">
-                <h3>Quick Links</h3>
+                <h3>About Dropex</h3>
                 <ul>
-                    <li><a href="#hero">Home</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="#"><i class="fas fa-history"></i> Our Story</a></li>
+                    <li><a href="#"><i class="fas fa-gift"></i> Loyalty Program</a></li>
+                    <li><a href="#"><i class="fas fa-newspaper"></i> Newsroom</a></li>
+                    <li><a href="#"><i class="fas fa-briefcase"></i> Career Opportunities</a></li>
+                    <li><a href="#"><i class="fas fa-star"></i> Customer Reviews</a></li>
                 </ul>
             </div>
             <div class="footer-column">
-                <h3>Connect With Us</h3>
-                <div class="social-media">
-                    <a href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                </div>
+                <h3>Our Services</h3>
+                <ul>
+                    <li><a href="#"><i class="fas fa-shopping-cart"></i> Global Purchases</a></li>
+                    <li><a href="#"><i class="fas fa-user"></i> Personal Shopper</a></li>
+                    <li><a href="#"><i class="fas fa-truck"></i> Fulfillment & Delivery</a></li>
+                    <li><a href="#"><i class="fas fa-route"></i> Regional Transport</a></li>
+                    <li><a href="#"><i class="fas fa-ship"></i> Sea & Air Freight</a></li>
+                    <li><a href="#"><i class="fas fa-box"></i> Storage Solutions</a></li>
+                </ul>
+            </div>
+            <div class="footer-column">
+                <h3>Support</h3>
+                <ul>
+                    <li><a href="#"><i class="fas fa-question-circle"></i> Frequently Asked Questions</a></li>
+                    <li><a href="#"><i class="fas fa-book"></i> User Guide</a></li>
+                    <li><a href="#"><i class="fas fa-headset"></i> Contact Assistance</a></li>
+                    <li><a href="#"><i class="fas fa-bug"></i> Report an Issue</a></li>
+                    <li><a href="#"><i class="fas fa-truck-loading"></i> Track My Shipment</a></li>
+                    <li><a href="#"><i class="fas fa-credit-card"></i> Payment Options</a></li>
+                </ul>
             </div>
         </div>
-        <p>&copy; 2025 Dropex Logistics & Transport. All rights reserved.</p>
+        <p>&copy; 2024 Dropex Logistics. All rights reserved.</p>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
