--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <header class="header">
         <div class="container">
             <div class="logo">
-                <span>DropEX Logistics</span>
+                <!-- Add your logo image here -->
+                <img src="main logo.png" alt="Dropex Logistics" class="logo-img">
             </div>
             <nav class="nav">
                 <ul>
