--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
     <header class="header">
         <div class="container">
             <div class="logo">
-                <!-- Add your logo image here -->
-                <img src="main logo.png" alt="Dropex Logistics" class="logo-img">
+                <span>DropEX Logistics</span>
             </div>
             <nav class="nav">
                 <ul>
@@ -24,8 +23,8 @@
                     <li><a href="#about"><i class="fas fa-info-circle"></i> About Us</a></li>
                     <li><a href="#availability"><i class="fas fa-shipping-fast"></i> Global Reach</a></li>
                     <li><a href="#contact"><i class="fas fa-envelope"></i> Get in Touch</a></li>
-                    <li><a href="#" class="login-link"><i class="fas fa-sign-in-alt"></i> Login</a></li>
-                    <li><a href="#" class="signup-link"><i class="fas fa-user-plus"></i> Sign Up</a></li>
+                    <li><a href="login.html" class="login-link"><i class="fas fa-sign-in-alt"></i> Login</a></li>
+                    <li><a href="register.html" class="signup-link"><i class="fas fa-user-plus"></i> Sign Up</a></li>
                 </ul>
             </nav>
         </div>
