--- a/index.html
+++ b/index.html
@@ -164,33 +164,33 @@
             <div class="footer-column">
                 <h3>About Dropex</h3>
                 <ul>
-                    <li><a href="#"><i class="fas fa-history"></i> Our Story</a></li>
-                    <li><a href="#"><i class="fas fa-gift"></i> Loyalty Program</a></li>
-                    <li><a href="#"><i class="fas fa-newspaper"></i> Newsroom</a></li>
-                    <li><a href="#"><i class="fas fa-briefcase"></i> Career Opportunities</a></li>
-                    <li><a href="#"><i class="fas fa-star"></i> Customer Reviews</a></li>
+                    <li><a href="ourstory.html"><i class="fas fa-history"></i> Our Story</a></li>
+                    <li><a href="loyaltyprogram.html"><i class="fas fa-gift"></i> Loyalty Program</a></li>
+                    <li><a href="newsroom.html"><i class="fas fa-newspaper"></i> Newsroom</a></li>
+                    <li><a href="careers.html"><i class="fas fa-briefcase"></i> Career Opportunities</a></li>
+                    <li><a href="reviews.html"><i class="fas fa-star"></i> Customer Reviews</a></li>
                 </ul>
             </div>
             <div class="footer-column">
                 <h3>Our Services</h3>
                 <ul>
-                    <li><a href="#"><i class="fas fa-shopping-cart"></i> Global Purchases</a></li>
-                    <li><a href="#"><i class="fas fa-user"></i> Personal Shopper</a></li>
-                    <li><a href="#"><i class="fas fa-truck"></i> Fulfillment & Delivery</a></li>
-                    <li><a href="#"><i class="fas fa-route"></i> Regional Transport</a></li>
-                    <li><a href="#"><i class="fas fa-ship"></i> Sea & Air Freight</a></li>
-                    <li><a href="#"><i class="fas fa-box"></i> Storage Solutions</a></li>
+                    <li><a href="globalpurchases.html"><i class="fas fa-shopping-cart"></i> Global Purchases</a></li>
+                    <li><a href="personalshopper.html"><i class="fas fa-user"></i> Personal Shopper</a></li>
+                    <li><a href="fulfillmentdelivery.html"><i class="fas fa-truck"></i> Fulfillment & Delivery</a></li>
+                    <li><a href="regionaltransport.html"><i class="fas fa-route"></i> Regional Transport</a></li>
+                    <li><a href="seaairfreight.html"><i class="fas fa-ship"></i> Sea & Air Freight</a></li>
+                    <li><a href="storagesolutions.html"><i class="fas fa-box"></i> Storage Solutions</a></li>
                 </ul>
             </div>
             <div class="footer-column">
                 <h3>Support</h3>
                 <ul>
-                    <li><a href="#"><i class="fas fa-question-circle"></i> Frequently Asked Questions</a></li>
-                    <li><a href="#"><i class="fas fa-book"></i> User Guide</a></li>
-                    <li><a href="#"><i class="fas fa-headset"></i> Contact Assistance</a></li>
-                    <li><a href="#"><i class="fas fa-bug"></i> Report an Issue</a></li>
-                    <li><a href="#"><i class="fas fa-truck-loading"></i> Track My Shipment</a></li>
-                    <li><a href="#"><i class="fas fa-credit-card"></i> Payment Options</a></li>
+                    <li><a href="faq.html"><i class="fas fa-question-circle"></i> Frequently Asked Questions</a></li>
+                    <li><a href="userguide.html"><i class="fas fa-book"></i> User Guide</a></li>
+                    <li><a href="contactassistance.html"><i class="fas fa-headset"></i> Contact Assistance</a></li>
+                    <li><a href="reportissue.html"><i class="fas fa-bug"></i> Report an Issue</a></li>
+                    <li><a href="trackshipment.html"><i class="fas fa-truck-loading"></i> Track My Shipment</a></li>
+                    <li><a href="paymentoptions.html"><i class="fas fa-credit-card"></i> Payment Options</a></li>
                 </ul>
             </div>
         </div>
