--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
 <body>
     <div class="login-container">
         <div class="logo">
-            <img src="assets/main logo.png" alt="Dropex Logo">
+            <img src="main logo.png" alt="Dropex Logo">
         </div>
         <form action="login.php" method="post" class="login-form">
             <h2>Sign in to Dropex</h2>
