--- a/register.html
+++ b/register.html
@@ -14,7 +14,7 @@
     <div class="container">
         <!-- Logo Section -->
         <div class="logo-container">
-            <img src="assets/main logo.png" alt="Dropex Logo">
+            <img src="main logo.png" alt="Dropex Logo">
         </div>
 
         <!-- Registration Form -->
