--- a/index.html
+++ b/index.html
@@ -10,36 +10,20 @@
 </head>
 
 <body>
-    <!-- Header Section -->
-    <header class="header">
-        <div class="container">
-            <div class="logo">
-                <span>DropEX Logistics</span>
-            </div>
-            <nav class="nav">
-                <ul>
-                    <li><a href="#hero"><i class="fas fa-home"></i> Welcome</a></li>
-                    <li><a href="#services"><i class="fas fa-concierge-bell"></i> Our Services</a></li>
-                    <li><a href="#about"><i class="fas fa-info-circle"></i> About Us</a></li>
-                    <li><a href="#availability"><i class="fas fa-shipping-fast"></i> Global Reach</a></li>
-                    <li><a href="#contact"><i class="fas fa-envelope"></i> Get in Touch</a></li>
-                    <li><a href="login.html" class="login-link"><i class="fas fa-sign-in-alt"></i> Login</a></li>
-                    <li><a href="register.html" class="signup-link"><i class="fas fa-user-plus"></i> Sign Up</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-
-    <!-- Hero Section -->
-     <section id="hero">
-<section class="hero">
-    <div class="hero-content">
-        <img src="main logo.png" alt="Dropex Logo" class="hero-logo">
-        <h1>Delivering Excellence Worldwide</h1>
-        <p>Ensuring your goods reach their destination swiftly and securely.</p>
-        <a href="#services" class="btn">Discover Our Services</a>
-    </div>
-</section>
+<!-- Header Section --> <header class="header"> 
+    <div class="container"> <div class="logo"> 
+        <span>DropEX Logistics</span> </div> 
+        <nav class="nav"> 
+            <!-- Navigation Links (if any) can be added here --> 
+            </nav> </div> </header> <!-- Hero Section --> 
+            <section id="hero" class="hero"> 
+                <div class="hero-content"> 
+                    <img src="main logo.png" alt="DropEX Logo" class="hero-logo"> 
+                    <h1>Delivering Excellence Worldwide</h1> 
+                    <p>Ensuring your goods reach their destination swiftly and securely.</p> 
+                    <div class="buttons"> <a href="#" class="btn">Login</a> <a href="#" class="btn">Sign Up</a> 
+                    </div> </div> 
+                </section>
 
 
     <!-- Services Section -->
@@ -142,60 +126,50 @@
         </div>
     </section>
 
-    <!-- Contact Section -->
-    <section id="contact">
-        <h2>Connect with Us</h2>
-        <form>
-            <input type="text" placeholder="Your Name">
-            <input type="email" placeholder="Your Email">
-            <textarea placeholder="Your Message"></textarea>
-            <button type="submit">Submit Message</button>
-        </form>
-    </section>
-
     <!-- Footer -->
-    <footer>
-        <div class="social-media">
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+<footer>
+    <div class="social-media">
+        <a href="https://www.twitter.com/dropexlogistics"><i class="fab fa-twitter"></i></a>
+        <a href="https://www.linkedin.com/company/dropexlogistics"><i class="fab fa-linkedin-in"></i></a>
+        <a href="https://www.instagram.com/dropexlogistics"><i class="fab fa-instagram"></i></a>
+    </div>
+    <div class="footer-container">
+        <div class="footer-column">
+            <h3>About Dropex</h3>
+            <ul>
+                <li><a href="ourstory.html"><i class="fas fa-history"></i> Our Story</a></li>
+                <li><a href="loyaltyprogram.html"><i class="fas fa-gift"></i> Loyalty Program</a></li>
+                <li><a href="newsroom.html"><i class="fas fa-newspaper"></i> Newsroom</a></li>
+                <li><a href="careers.html"><i class="fas fa-briefcase"></i> Career Opportunities</a></li>
+                <li><a href="reviews.html"><i class="fas fa-star"></i> Customer Reviews</a></li>
+            </ul>
         </div>
-        <div class="footer-container">
-            <div class="footer-column">
-                <h3>About Dropex</h3>
-                <ul>
-                    <li><a href="ourstory.html"><i class="fas fa-history"></i> Our Story</a></li>
-                    <li><a href="loyaltyprogram.html"><i class="fas fa-gift"></i> Loyalty Program</a></li>
-                    <li><a href="newsroom.html"><i class="fas fa-newspaper"></i> Newsroom</a></li>
-                    <li><a href="careers.html"><i class="fas fa-briefcase"></i> Career Opportunities</a></li>
-                    <li><a href="reviews.html"><i class="fas fa-star"></i> Customer Reviews</a></li>
-                </ul>
-            </div>
-            <div class="footer-column">
-                <h3>Our Services</h3>
-                <ul>
-                    <li><a href="globalpurchases.html"><i class="fas fa-shopping-cart"></i> Global Purchases</a></li>
-                    <li><a href="personalshopper.html"><i class="fas fa-user"></i> Personal Shopper</a></li>
-                    <li><a href="fulfillmentdelivery.html"><i class="fas fa-truck"></i> Fulfillment & Delivery</a></li>
-                    <li><a href="regionaltransport.html"><i class="fas fa-route"></i> Regional Transport</a></li>
-                    <li><a href="seaairfreight.html"><i class="fas fa-ship"></i> Sea & Air Freight</a></li>
-                    <li><a href="storagesolutions.html"><i class="fas fa-box"></i> Storage Solutions</a></li>
-                </ul>
-            </div>
-            <div class="footer-column">
-                <h3>Support</h3>
-                <ul>
-                    <li><a href="faq.html"><i class="fas fa-question-circle"></i> Frequently Asked Questions</a></li>
-                    <li><a href="userguide.html"><i class="fas fa-book"></i> User Guide</a></li>
-                    <li><a href="contactassistance.html"><i class="fas fa-headset"></i> Contact Assistance</a></li>
-                    <li><a href="reportissue.html"><i class="fas fa-bug"></i> Report an Issue</a></li>
-                    <li><a href="trackshipment.html"><i class="fas fa-truck-loading"></i> Track My Shipment</a></li>
-                    <li><a href="paymentoptions.html"><i class="fas fa-credit-card"></i> Payment Options</a></li>
-                </ul>
-            </div>
+        <div class="footer-column">
+            <h3>Our Services</h3>
+            <ul>
+                <li><a href="globalpurchases.html"><i class="fas fa-shopping-cart"></i> Global Purchases</a></li>
+                <li><a href="personalshopper.html"><i class="fas fa-user"></i> Personal Shopper</a></li>
+                <li><a href="fulfillmentdelivery.html"><i class="fas fa-truck"></i> Fulfillment & Delivery</a></li>
+                <li><a href="regionaltransport.html"><i class="fas fa-route"></i> Regional Transport</a></li>
+                <li><a href="seaairfreight.html"><i class="fas fa-ship"></i> Sea & Air Freight</a></li>
+                <li><a href="storagesolutions.html"><i class="fas fa-box"></i> Storage Solutions</a></li>
+            </ul>
         </div>
-        <p>&copy; 2024 Dropex Logistics. All rights reserved.</p>
-    </footer>
+        <div class="footer-column">
+            <h3>Support</h3>
+            <ul>
+                <li><a href="faq.html"><i class="fas fa-question-circle"></i> Frequently Asked Questions</a></li>
+                <li><a href="userguide.html"><i class="fas fa-book"></i> User Guide</a></li>
+                <li><a href="contactassistance.html"><i class="fas fa-headset"></i> Contact Assistance</a></li>
+                <li><a href="reportissue.html"><i class="fas fa-bug"></i> Report an Issue</a></li>
+                <li><a href="trackshipment.html"><i class="fas fa-truck-loading"></i> Track My Shipment</a></li>
+                <li><a href="paymentoptions.html"><i class="fas fa-credit-card"></i> Payment Options</a></li>
+            </ul>
+        </div>
+    </div>
+    <p>&copy; 2024 DropEx Logistics. All rights reserved.</p>
+</footer>
+
 
     <script src="script.js"></script>
 </body>
